Upgrade to Spring Security 5.8